# opentelemetry

./: .gitignore  .gitpod.yml  README.md  package.json
.github/: FUNDING.yml
.infra/: docker-compose.yml  grafana-datasources.yml  grafana.ini  otel-collector.yml  prometheus.yml  tempo.yml
examples/effect-node/: package.json  tracing.js
examples/simple-node/: package.json
examples/simple-rust/: Cargo.toml  README.md
examples/simple-rust/src/: main.rs  o11y.rs
examples/tokio-rust/: Cargo.toml  README.md
examples/tokio-rust/src/: main.rs  o11y.rs
