[package]
name = "tokio-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
tokio = { version = "1.24.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

# Optional dependencies
opentelemetry = { version = "0.18.0", optional = true }
opentelemetry-jaeger = { version = "0.17.0", optional = true }
tracing-opentelemetry = { version = "0.18.0", optional = true }

[features]
default = ["otel"]
otel = [
  "dep:opentelemetry",
  "dep:opentelemetry-jaeger",
  "dep:tracing-opentelemetry",
]
